--- a/application/src/main/res/values/strings.xml
+++ b/application/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
 
     <string name="title_section1">Create Bulletin</string>
     <string name="title_section2">Previous Bulletins</string>
-    <string name="title_section3">Key</string>
-    <string name="title_section4">Network Status</string>
+    <string name="title_section3">Wallet</string>
+    <string name="title_section4">Settings</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-    <string name="action_nodeservice">Node Service</string>
-    <string name="action_peercount">#</string>
+    <string name="action_query_server">Query Server</string>
+    <string name="action_fresh_wallet">Fresh Wallet</string>
 
     <string name="action_settings">Settings</string>
 
