--- a/application/src/main/res/values/strings.xml
+++ b/application/src/main/res/values/strings.xml
@@ -2,8 +2,15 @@
 <resources>
 
     <string name="app_name">ahimsa-app</string>
-    <string name="action_settings">Settings</string>
+
     <string name="action_create_bulletin">Create Bulletin</string>
+    <string name="action_sync_now">Sync Now</string>
+    <string name="action_export_coin">Export Coin</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="action_source">Source</string>
+    <string name="action_licenses">Licenses</string>
+
     <string name="create_bulletin">Create Bulletin</string>
     <string name="action_broadcast_bulletin">Broadcast Bulletin</string>
     <string name="title_activity_main">MainActivity</string>
